making the closing animation of navbar smooth on mobile view

--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,9 @@
   ],
   "hints": {
     "no-inline-styles": "off",
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "detect-css-reflows/composite": "off",
+    "detect-css-reflows/layout": "off",
+    "detect-css-reflows/paint": "off"
   }
 }
