fixing small portfolio layer links on mobile view

--- a/.hintrc
+++ b/.hintrc
@@ -7,6 +7,7 @@
     "disown-opener": "off",
     "detect-css-reflows/composite": "off",
     "detect-css-reflows/layout": "off",
-    "detect-css-reflows/paint": "off"
+    "detect-css-reflows/paint": "off",
+    "compat-api/css": "off"
   }
 }
