converting the interface of the project into a React App

--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,7 @@
     "detect-css-reflows/composite": "off",
     "detect-css-reflows/layout": "off",
     "detect-css-reflows/paint": "off",
-    "compat-api/css": "off"
+    "compat-api/css": "off",
+    "manifest-exists": "off"
   }
 }
