--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://mostafasaleh1.github.io/myprofile",
-  "name": "myprofile-react",
+  "name": "myprofile",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "scrollreveal": "^4.0.9",
     "typed.js": "^2.0.15",
     "web-vitals": "^2.1.4"
   },
