fixing homepage link in pckg.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername.github.io/myprofile",
+  "homepage": "https://mostafasaleh1.github.io/myprofile",
   "name": "myprofile",
   "version": "0.1.0",
   "private": true,
