--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typed.js": "^2.0.15",
     "web-vitals": "^2.1.4"
