--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "scrollreveal": "^4.0.9",
     "typed.js": "^2.0.15",
     "web-vitals": "^2.1.4"
   },
