--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "boxicons": "^2.1.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.12.4",
     "gh-pages": "^5.0.0",
