--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.12.4",
     "gh-pages": "^5.0.0",
+    "i18next": "^22.5.0",
+    "i18next-browser-languagedetector": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
