fixed: and reloading

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mostafasaleh1.github.io",
+  "homepage": "https://mostafasaleh1.github.io/",
   "name": "myprofile",
   "version": "0.1.0",
   "private": true,
